--- a/etc/style.qss
+++ b/etc/style.qss
@@ -4,3 +4,15 @@ QLabel{
     color : black;
     padding : 5px;
 }
+
+.wrong{
+    color : #FF5B58;
+}
+
+.right{
+    color : #62FF92;
+}
+
+code{
+    color : #FF5B58;
+}
