--- a/src/ui/homepage.ui
+++ b/src/ui/homepage.ui
@@ -91,21 +91,7 @@
           </property>
          </widget>
          <widget class="QWidget" name="page_home"/>
-         <widget class="QWidget" name="page_practice">
-          <widget class="QLabel" name="label_2">
-           <property name="geometry">
-            <rect>
-             <x>220</x>
-             <y>180</y>
-             <width>211</width>
-             <height>151</height>
-            </rect>
-           </property>
-           <property name="text">
-            <string>Practice</string>
-           </property>
-          </widget>
-         </widget>
+         <widget class="QWidget" name="page_practice"/>
          <widget class="QWidget" name="page_stats">
           <widget class="QLabel" name="label_3">
            <property name="geometry">
