Get rid of langs, since qt can do this for us Corrected bug where connection with tusermanager is not working Preparing to change file saving from binary to QSettings

--- a/ressources.qrc
+++ b/ressources.qrc
@@ -2,7 +2,7 @@
     <qresource prefix="/words">
         <file alias="words.txt">ressources/words.txt</file>
     </qresource>
-    <qresource prefix="/words" lang="fr">
+    <qresource lang="fr" prefix="/words">
         <file alias="words.txt">ressources/words_fr.txt</file>
     </qresource>
     <qresource prefix="/texts">
