Created qwertz keyboard configuration Added spanish words Added more frensh texts Used qt ressources in a smarter way

--- a/ressources.qrc
+++ b/ressources.qrc
@@ -1,23 +1,21 @@
 <RCC>
-    <qresource prefix="/words">
-        <file alias="words.txt">ressources/words.txt</file>
-    </qresource>
-    <qresource prefix="/words" lang="fr">
-        <file alias="words.txt">ressources/words_fr.txt</file>
-    </qresource>
-    <qresource prefix="/texts">
-        <file alias="texts.xml">ressources/texts.xml</file>
-    </qresource>
-    <qresource prefix="/texts" lang="fr">
-        <file alias="texts.xml">ressources/texts_fr.xml</file>
-    </qresource>
     <qresource prefix="/">
         <file alias="layouts.txt">ressources/layouts.txt</file>
         <file alias="style.qss">ressources/style.qss</file>
-        <file alias="layout.json">ressources/layout.json</file>
+        <file alias="layout.json">ressources/layout_qwerty.json</file>
+        <file alias="texts.xml">ressources/texts.xml</file>
+        <file alias="words.txt">ressources/words.txt</file>
     </qresource>
     <qresource prefix="/" lang="fr" >
-        <file alias="layout.json">ressources/layout_fr.json</file>
+        <file alias="layout.json">ressources/layout_azerty.json</file>
+        <file alias="texts.xml">ressources/texts_fr.xml</file>
+        <file alias="words.txt">ressources/words_fr.txt</file>
+    </qresource>
+    <qresource prefix="/" lang="es" >
+        <file alias="words.txt">ressources/words_es.txt</file>
+    </qresource>
+    <qresource prefix="/" lang="de" >
+        <file alias="layout.json">ressources/layout_qwertz.json</file>
     </qresource>
     <qresource prefix="/icons">
         <file alias="play.png">ressources/play.png</file>
