Possible to connect and get user list

--- a/ressources.qrc
+++ b/ressources.qrc
@@ -28,6 +28,7 @@
         <file>resources/icon.ico</file>
         <file>resources/icon.icns</file>
         <file alias="bin.png">resources/bin.png</file>
+	<file alias="crown.png">resources/crown.png</file>
     </qresource>
     <qresource prefix="/images">
         <file alias="hands.png">resources/hands.png</file>
